Add query consistency and cas examples

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,5 +1,6 @@
 PROGS=connecting updating retrieving query-create-index query-criteria \
-	  query-placeholders counter expiration
+	  query-placeholders counter expiration \
+	  query-consistency cas
 
 all: $(PROGS)
 
