Add SSL connection example

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,6 +1,7 @@
 PROGS=connecting updating retrieving query-create-index query-criteria \
 	  query-placeholders counter expiration \
-	  query-consistency cas durability bulk-get bulk-store
+	  query-consistency cas durability bulk-get bulk-store \
+	  connecting-ssl
 
 all: $(PROGS)
 
