Add updating and retrieving examples

--- a/dotnet/DevGuide.csproj
+++ b/dotnet/DevGuide.csproj
@@ -64,12 +64,18 @@
   <ItemGroup>
     <Compile Include="ConnectionConfig.cs" />
     <Compile Include="ConnectionBase.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Updating.cs" />
+    <Compile Include="Retrieving.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
