--- a/dotnet/DevGuide.csproj
+++ b/dotnet/DevGuide.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Updating.cs" />
-    <Compile Include="Retrieving.cs" />
+    <Compile Include="BulkInsert.cs" />
+    <Compile Include="BulkGet.cs" />
+    <Compile Include="Update.cs" />
+    <Compile Include="Retrieve.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
