--- a/dotnet/DevGuide.csproj
+++ b/dotnet/DevGuide.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DevGuide.Expiration</StartupObject>
+    <StartupObject>DevGuide.Cas</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging, Version=3.1.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
@@ -71,6 +71,8 @@
     <Compile Include="BulkInsert.cs" />
     <Compile Include="BulkGet.cs" />
     <Compile Include="Counter.cs" />
+    <Compile Include="Durability.cs" />
+    <Compile Include="Cas.cs" />
     <Compile Include="Update.cs" />
     <Compile Include="Retrieve.cs" />
   </ItemGroup>
