--- a/dotnet/DevGuide.csproj
+++ b/dotnet/DevGuide.csproj
@@ -53,6 +53,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -62,6 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncExample.cs" />
+    <Compile Include="SyncExample.cs" />
     <Compile Include="ConnectionConfig.cs" />
     <Compile Include="ConnectionBase.cs" />
     <Compile Include="Expiration.cs" />
