at_plus examples

--- a/c/Makefile
+++ b/c/Makefile
@@ -2,7 +2,8 @@ PROGS=connecting updating retrieving query-create-index query-criteria \
 	  query-placeholders counter expiration \
 	  query-consistency cas durability bulk-get bulk-store \
 	  connecting-ssl subdoc-retrieving subdoc-updating fts-basic \
-	  create-remove-bucket flush n1ql-create-primary-index
+	  create-remove-bucket flush n1ql-create-primary-index \
+	  query-atplus
 
 all: $(PROGS)
 
