--- a/dotnet/packages.config
+++ b/dotnet/packages.config
@@ -3,7 +3,8 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Log4Net1213" version="3.3.1" targetFramework="net452" />
-  <package id="CouchbaseNetClient" version="2.3.0" targetFramework="net452" />
+  <package id="CouchbaseNetClient" version="2.5.9" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
+  <package id="OpenTracing.Signed" version="0.10.4" targetFramework="net452" />
 </packages>
