--- a/dotnet/DevGuide.csproj
+++ b/dotnet/DevGuide.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>DevGuide.Cas</StartupObject>
+    <StartupObject>DevGuide.FieldEncryption</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Common.Logging, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
@@ -47,6 +47,9 @@
     <Reference Include="Common.Logging.Log4Net1213, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
       <HintPath>packages\Common.Logging.Log4Net1213.3.3.1\lib\net40\Common.Logging.Log4Net1213.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Couchbase.Extensions.Encryption, Version=1.0.0.2, Culture=neutral, PublicKeyToken=05e9c6b5a9ec94c2, processorArchitecture=MSIL">
+      <HintPath>packages\Couchbase.Extensions.Encryption.1.0.0-beta\lib\net45\Couchbase.Extensions.Encryption.dll</HintPath>
     </Reference>
     <Reference Include="Couchbase.NetClient, Version=2.5.9.0, Culture=neutral, PublicKeyToken=05e9c6b5a9ec94c2, processorArchitecture=MSIL">
       <HintPath>packages\CouchbaseNetClient.2.5.9\lib\net45\Couchbase.NetClient.dll</HintPath>
@@ -65,7 +68,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Reflection.Extensions" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AsyncExample.cs" />
+    <Compile Include="FieldEncryption.cs" />
     <Compile Include="SyncExample.cs" />
     <Compile Include="AsyncBatch.cs" />
     <Compile Include="ConnectionConfig.cs" />
