Add SSL Cert auth example for C

--- a/c/.gitignore
+++ b/c/.gitignore
@@ -1,21 +1,23 @@
-updating
-connecting
-counter
-retrieving
-expiration
-query-placeholders
-query-create-index
-query-criteria
-query-consistency
-cas
-durability
+*.dSYM
 bulk-get
 bulk-store
+cas
+connecting
+connecting-cert-auth
 connecting-ssl
-*.dSYM
-subdoc-updating
-subdoc-retrieving
-fts-basic
+counter
 create-remove-bucket
+durability
+expiration
 flush
+fts-basic
 n1ql-create-primary-index
+query-atplus
+query-consistency
+query-create-index
+query-criteria
+query-placeholders
+retrieving
+subdoc-retrieving
+subdoc-updating
+updating
