php: add sample for asymmetric encryption

--- a/php/encryption/composer.json
+++ b/php/encryption/composer.json
@@ -14,6 +14,7 @@
     ],
     "minimum-stability": "stable",
     "scripts": {
-        "demo": "@php ./demo.php"
+        "demo-symmetric": "@php ./demo-symmetric.php",
+        "demo-asymmetric": "@php ./demo-asymmetric.php"
     }
 }
