--- a/java/pom.xml
+++ b/java/pom.xml
@@ -9,12 +9,12 @@
     <dependency>
       <groupId>com.couchbase.client</groupId>
       <artifactId>java-client</artifactId>
-      <version>2.6.0-beta</version>
+      <version>2.6.0</version>
     </dependency>
     <dependency>
       <groupId>com.couchbase.client</groupId>
-      <artifactId>encryption-extension</artifactId>
-      <version>0.1.0</version>
+      <artifactId>encryption</artifactId>
+      <version>1.0.0</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -22,11 +22,11 @@
       <version>1.2.17</version>
     </dependency>
   </dependencies>
-  <repositories>
-    <repository>
-      <id>cb-pre</id>
-      <name>Couchbase Prerelease Repo</name>
-      <url>http://files.couchbase.com/maven2</url>
-    </repository>
-  </repositories>
+  <!--<repositories>-->
+    <!--<repository>-->
+      <!--<id>cb-pre</id>-->
+      <!--<name>Couchbase Prerelease Repo</name>-->
+      <!--<url>http://files.couchbase.com/maven2</url>-->
+    <!--</repository>-->
+  <!--</repositories>-->
 </project>
