--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,11 +5,16 @@
   <artifactId>devguide</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>com.couchbase.client</groupId>
       <artifactId>java-client</artifactId>
-      <version>2.6.0</version>
+      <version>2.7.8</version>
     </dependency>
     <dependency>
       <groupId>com.couchbase.client</groupId>
@@ -22,11 +27,19 @@
       <version>1.2.17</version>
     </dependency>
   </dependencies>
-  <!--<repositories>-->
-    <!--<repository>-->
-      <!--<id>cb-pre</id>-->
-      <!--<name>Couchbase Prerelease Repo</name>-->
-      <!--<url>http://files.couchbase.com/maven2</url>-->
-    <!--</repository>-->
-  <!--</repositories>-->
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
