Use base64 coder from OpenSSL

--- a/c/bincoding/Makefile
+++ b/c/bincoding/Makefile
@@ -1,4 +1,4 @@
-LDFLAGS=-lcouchbase -lm
+LDFLAGS=-lcouchbase -lm -lcrypto
 CFLAGS=-g
 
-bincoding: bincoding.c cJSON.c
+bincoding: bincoding.c cJSON.c base64.c
