--- a/java/src/main/resources/log4j.properties
+++ b/java/src/main/resources/log4j.properties
@@ -14,3 +14,20 @@ log4j.appender.shortstdout=org.apache.log4j.ConsoleAppender
 log4j.appender.shortstdout.Target=System.out
 log4j.appender.shortstdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.shortstdout.layout.ConversionPattern=%d{HH:mm:ss} %m%n
+
+#log4j.logger.com.couchbase=INFO, stdout
+#log4j.logger.reactor.util=INFO, stdout
+
+# -Dlog4j.debug
+# <dependency>
+#   <groupId>org.slf4j</groupId>
+#   <artifactId>slf4j-log4j12</artifactId>
+#   <version>${slf4j.version}</version>
+#   </dependency>
+#
+# <dependency>
+#   <groupId>log4j</groupId>
+#   <artifactId>log4j</artifactId>
+#   <version>${log4j.version}</version>
+# </dependency>
+#
